--- a/newtons/index.html
+++ b/newtons/index.html
@@ -46,7 +46,7 @@
         <H2>Convierte a newtons: Kg, Libras y calcula la masa</H2><br><br>
         <p>Puedes ver el proyecto en github</p>
         <p>(click en la imagen)</p><br><br>
-        <a href="">
+        <a href="https://github.com/OmarContreras-Cbtis/Calculadora-Newtons">
             <img src="Images/github-mark.png" alt="icono" class="imagen">
         </a><br><br><br>
         <p> Pagina elaborada por Omar Alejandro Contreras Arroyo 5°G | Cbtis 122</p>
